--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Fortæller det er html5 -->
 
 <!-- html starter og slutter hele dokumentet / lang=da: Fortæller siden er på dansk -->
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 
 <!-- I <head> har man opsætning - alt det som man ikke ser som selve indholdet -->
 <head>
@@ -13,35 +13,29 @@
     <title>Dominio De Pontas</title>
 
     <!-- Metatags der fortæller at søgemaskiner er velkomne, hvem der udgiver siden og copyright information -->
-    <meta name="robots" content="All">
-    <meta name="author" content="Udgiver">
-    <meta name="copyright" content="Information om copyright">
+    <meta name="robots" content="All"/>
+    <meta name="author" content="Udgiver"/>
+    <meta name="copyright" content="Information om copyright"/>
 
     <!-- Titel som ses oppe i browserens tab mv. -->
     <title>Contact Dominio de Pontas</title>
 
-    <meta name="description" content="Dominio de Pontas - wine for a new generation.">
-    <!-- Max ca 170-200 karakterer - 600px -->
-    <meta name="keywords" content="great spanish wine,red wine,sangria,winery,wine">
-    <!-- Få unikke og relevante (Skal gå igen på siden)-->
+    <meta name="description" content="Dominio de Pontas - wine for a new generation."/>
+
+    <meta name="keywords" content="great spanish wine,red wine,sangria,winery,wine"/>
+
 
     <!-- fortæller hvilket billede, titel og beskrivelse der skal vises ved deling på fx facebook)-->
-    <meta property="og:title" content="Dominio de Pontas">
-    
-    <meta property="og:type" content="website">
-    
-    <meta property="og:url" content="http://www.cilsoee.dk">
-    
-    <meta property="og:image" content="http://www.cilsoee.dk/images/Muscat-flaske.jpg">
-    
-    <meta property="og:description" content=
-            "Here at Dominio de Pontas great wine is made. We strive to make great Spanish wine at our winery in Navarra. Visit our website to read more.">
-    
-    <meta property="og:locale" content="en_ES">
+    <meta property="og:title" content="Dominio de Pontas"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://www.cilsoee.dk"/>
+    <meta property="og:image" content="http://www.cilsoee.dk/images/Muscat-flaske.jpg"/>
+    <meta property="og:description" content="Here at Dominio de Pontas great wine is made. We strive to make great Spanish wine at our winery in Navarra. Visit our website to read more."/>
+    <meta property="og:locale" content="en_ES"/>
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
-    <link rel="stylesheet" href="css/hamburgers.css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/hamburgers.css"/>
+    <link href="css/styles.css" rel="stylesheet" type="text/css"/>
     <script src="https://use.fontawesome.com/75970a48c3.js"></script>
     <script src="javascript/script.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
